--- a/src/components/beverage-product-development/beverage-product-development.module.scss
+++ b/src/components/beverage-product-development/beverage-product-development.module.scss
@@ -141,6 +141,7 @@
 
             .colWhyChooseUs {
                 padding-bottom: 20px;
+                min-width: 347px;
 
                 .whyChooseUsItem {
                     width: 100%;
