--- a/src/components/private-label-services/private-label-services.module.scss
+++ b/src/components/private-label-services/private-label-services.module.scss
@@ -271,6 +271,7 @@
 
             .colWhyChooseUs {
                 padding-bottom: 20px;
+                min-width: 347px;
 
                 .whyChooseUsItem {
                     width: 100%;
