--- a/src/components/who-we-are/who-we-are.module.scss
+++ b/src/components/who-we-are/who-we-are.module.scss
@@ -305,7 +305,6 @@
 
 .whyChooseUs {
     width: 100%;
-    height: 520px;
     background-color: #EDEDED;
     padding-top: 50px;
     display: flex;
@@ -351,6 +350,7 @@
 
             .colWhyChooseUs {
                 padding-bottom: 20px;
+                min-width: 347px;
 
                 .whyChooseUsItem {
                     width: 100%;
