--- a/src/components/beverage-packaging-design/beverage-packaging-design.module.scss
+++ b/src/components/beverage-packaging-design/beverage-packaging-design.module.scss
@@ -264,6 +264,7 @@
 
             .colWhyChooseUs {
                 padding-bottom: 20px;
+                min-width: 347px;
 
                 .whyChooseUsItem {
                     width: 100%;
