--- a/src/components/company-profile/company-profile.module.scss
+++ b/src/components/company-profile/company-profile.module.scss
@@ -270,6 +270,7 @@
 
             .colWhyChooseUs {
                 padding-bottom: 20px;
+                min-width: 347px;
 
                 .whyChooseUsItem {
                     width: 100%;
