--- a/src/components/products/product-detail/products-detail.module.scss
+++ b/src/components/products/product-detail/products-detail.module.scss
@@ -247,6 +247,10 @@
             h4 {
                 color: #00894f;
             }
+
+        }
+        svg {
+            display: none;
         }
     }
 }
