--- a/src/components/who-we-are/who-we-are.module.scss
+++ b/src/components/who-we-are/who-we-are.module.scss
@@ -351,6 +351,7 @@
             .colWhyChooseUs {
                 padding-bottom: 20px;
                 min-width: 347px;
+                max-width: 350px;
 
                 .whyChooseUsItem {
                     width: 100%;
