--- a/src/components/beverage-packaging-design/beverage-packaging-design.module.scss
+++ b/src/components/beverage-packaging-design/beverage-packaging-design.module.scss
@@ -220,7 +220,7 @@
 
 .whyChooseUs {
     width: 100%;
-    height: 520px;
+    height: 100%;
     background-color: #EDEDED;
     padding-top: 50px;
     display: flex;
@@ -265,6 +265,7 @@
             .colWhyChooseUs {
                 padding-bottom: 20px;
                 min-width: 347px;
+                max-width: 350px;
 
                 .whyChooseUsItem {
                     width: 100%;
