--- a/src/components/beverage-product-development/beverage-product-development.module.scss
+++ b/src/components/beverage-product-development/beverage-product-development.module.scss
@@ -97,7 +97,7 @@
 
 .whyChooseUs {
     width: 100%;
-    height: 520px;
+    height: 100%;
     background-color: #EDEDED;
     padding-top: 50px;
     display: flex;
@@ -142,6 +142,7 @@
             .colWhyChooseUs {
                 padding-bottom: 20px;
                 min-width: 347px;
+                max-width: 350px;
 
                 .whyChooseUsItem {
                     width: 100%;
