--- a/src/components/products/product-detail/products-detail.module.scss
+++ b/src/components/products/product-detail/products-detail.module.scss
@@ -257,7 +257,7 @@
 
 .whyChooseUs {
     width: 100%;
-    height: 520px;
+    height: 100%;
     background-color: #EDEDED;
     padding-top: 50px;
     display: flex;
@@ -301,6 +301,8 @@
 
             .colWhyChooseUs {
                 padding-bottom: 20px;
+                min-width: 347px;
+                max-width: 350px;
 
                 .whyChooseUsItem {
                     width: 100%;
