--- a/src/components/who-we-are/who-we-are.module.scss
+++ b/src/components/who-we-are/who-we-are.module.scss
@@ -246,6 +246,10 @@
                 margin-top: 10px;
             }
         }
+
+        svg { 
+            display: none;
+        }
     }
 }
 
