--- a/src/components/home/home.module.scss
+++ b/src/components/home/home.module.scss
@@ -7,7 +7,6 @@
 
     img {
         width: 100%;
-        height: 633px;
     }
 }
 
@@ -71,7 +70,7 @@
             }
         }
 
-        svg { 
+        svg {
             display: none;
         }
     }
@@ -101,49 +100,37 @@
         border-bottom-right-radius: 70px;
         padding: 35px 88px;
 
-        .aboutUsTop {
-            .aboutUsTopCover {
+        .aboutUsPicture {
+            width: 100%;
+
+            img {
+                width: 150px;
+            }
+        }
+
+        .aboutUsTitle {
+            width: 700px;
+            text-align: center;
+
+            h1 {
+                color: #00894f;
+                font-size: 45px;
+                margin-bottom: unset;
+                font-weight: bold;
+                text-transform: uppercase;
                 position: relative;
 
-                .aboutUsPicture {
-                    width: 100%;
-                    justify-content: end;
-
-                    img {
-                        width: 150px;
-                    }
-
-                    &:nth-child(3) {
-                        justify-content: start;
-                    }
-                }
-
-                .aboutUsTitle {
-                    width: 700px;
-                    text-align: center;
-
-                    h1 {
-                        color: #00894f;
-                        font-size: 45px;
-                        margin-bottom: unset;
-                        font-weight: bold;
-                        text-transform: uppercase;
-                        position: relative;
-
-                        &::after {
-                            content: "";
-                            width: 220px;
-                            height: 6px;
-                            background: linear-gradient(to right, #00894f 60%, rgb(255, 255, 255) 40%);
-                            position: absolute;
-                            transform: translate(-50%, 50%);
-                            top: 95%;
-                            left: 50%;
-                        }
-                    }
+                &::after {
+                    content: "";
+                    width: 220px;
+                    height: 6px;
+                    background: linear-gradient(to right, #00894f 60%, rgb(255, 255, 255) 40%);
+                    position: absolute;
+                    transform: translate(-50%, 50%);
+                    top: 95%;
+                    left: 50%;
                 }
             }
-
         }
 
         h2 {
@@ -209,6 +196,8 @@
 }
 
 .carouselProductBackground {
+    background-color: #fff;
+    
     .productTopCover {
         width: 100%;
         height: 140px;
@@ -244,6 +233,7 @@
             margin-bottom: 4rem;
             box-shadow: 4px 4px 10px -1px #1D4486;
             width: 75% !important;
+            border-radius: 10px;
 
             .productCardImage {
                 display: flex;
@@ -268,7 +258,7 @@
             }
         }
 
-        svg { 
+        svg {
             display: none;
         }
     }
@@ -296,6 +286,7 @@
         color: #00894f;
         font-weight: bold;
         margin-bottom: 20px;
+        width: 100%;
 
         .bestSellingTop__left {
             display: flex;
@@ -406,8 +397,6 @@
                                 color: #00894f;
                             }
                         }
-
-
                     }
                 }
             }
@@ -478,6 +467,12 @@
 .newProduct {
     background-color: #fff;
     width: 100%;
+
+    .bestSellingTop {
+        .bestSellingTop__right {
+            margin-top: unset;
+        }
+    }
 }
 
 .juiceGuava {
@@ -593,6 +588,7 @@
                             height: 35px;
                             border-radius: 20px;
                             justify-content: space-around;
+                            cursor: pointer;
 
                             p {
                                 font-size: 16px;
@@ -687,7 +683,6 @@
                 position: relative;
 
                 .customerInformationTitle {
-                    width: 700px;
                     text-align: center;
 
                     h1 {
@@ -765,6 +760,182 @@
                     .iconBtn {
                         font-size: 18px;
                     }
+                }
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    .carouselCertificationBackground {
+        .certificationTopCover {
+            .certificationTitle {
+                h1 {
+                    font-size: 35px;
+                }
+            }
+        }
+    }
+
+    .aboutUs {
+        height: 990px;
+
+        .aboutUsCover {
+            width: 365px;
+            height: 955px;
+
+            .hideAboutUsPicture {
+                display: none;
+            }
+
+            .aboutUsTitle {
+                h1 {
+                    font-size: 38px;
+
+                    &::after {
+                        width: 205px;
+                    }
+                }
+            }
+        }
+    }
+
+    .bestSelling {
+        .bestSellingTop {
+            .bestSellingTop__left {
+                .left__cover {
+                    .images {
+                        display: none;
+                    }
+
+                    .coverTitle {
+                        .title {
+                            h2 {
+                                font-size: 35px;
+
+                                &::after {
+                                    left: 50%;
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+
+            .bestSellingTop__right {
+                .right__cover {
+                    a {
+                        font-size: 20px;
+                    }
+                }
+            }
+        }
+
+        .bestSellingBottom {
+            .bestSellingBottom__right {
+                margin-top: 25px;
+            }
+        }
+    }
+
+    .newProduct {
+        .bestSellingTop {
+            .bestSellingTop__left {
+                .left__cover {
+                    .coverTitle {
+                        .title {
+                            h2 {
+                                &::after {
+                                    left: 48%;
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+
+            .bestSellingTop__right {
+                margin-top: 32px;
+            }
+        }
+    }
+
+    .featuredProduct {
+        .bestSellingTop {
+            .bestSellingTop__left {
+                .left__cover {
+                    .coverTitle {
+                        .title {
+                            h2 {
+                                font-size: 28px;
+
+                                &.featuredProductTitle {
+                                    &::after {
+                                        left: 48%;
+                                        width: 260px;
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+
+    .news {
+        .newsCover {
+            .newsBottomCover {
+                .newsItem {
+                    width: unset;
+
+                    .imageTop {
+                        width: 365px;
+                    }
+
+                    .contentCover {
+                        .content {
+                            .contentTitle {
+                                h2 {
+                                    font-size: 19px;
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+
+    .whyChooseUs {
+        height: 1240px;
+
+        .whyChooseUsCover {
+            .whyChooseUsTopCover {
+                .whyChooseUsTitle {
+                    h1 {
+                        font-size: 40px;
+                    }
+                }
+            }
+        }
+    }
+
+    .customerInformation {
+        .customerInformationCover {
+            .customerInformationTop {
+                .customerInformationTopCover {
+                    .customerInformationTitle {
+                        h1 {
+                            font-size: 31px;
+                        }
+                    }
+                }
+            }
+
+            .customerInformationBottom {
+                input, textarea {
+                    width: 28rem;
                 }
             }
         }
