--- a/src/components/home/home.module.scss
+++ b/src/components/home/home.module.scss
@@ -197,7 +197,7 @@
 
 .carouselProductBackground {
     background-color: #fff;
-    
+
     .productTopCover {
         width: 100%;
         height: 140px;
@@ -548,56 +548,79 @@
         }
 
         .newsBottomCover {
-            padding: 20px 40px;
+            width: 100%;
 
-            .newsItem {
-                flex-direction: column;
-                width: 420px;
-                gap: 20px;
-                margin-bottom: 40px;
+            .newsCarousel {
+                margin: 25px;
 
-                .imageTop {
-                    width: 420px;
+                .newsItem {
+                    .imageTop {
+                        width: 350px;
+                        height: 250px;
+                        transition: transform .2s;
+                        cursor: pointer;
 
-                    img {
-                        width: 100%;
-                    }
-                }
-
-                .contentCover {
-                    .content {
-                        .contentTitle {
-                            h2 {
-                                text-transform: uppercase;
-                                font-size: 20px;
-                            }
+                        img {
+                            width: 100%;
+                            height: 100%;
                         }
 
-                        .contentBottom {
-                            .contentBottomUp {
-                                text-transform: uppercase;
-                                font-size: 15px
-                            }
+                        &:hover {
+                            transform: scale(1.05);
                         }
                     }
 
-                    .btn_see_more {
-                        button {
-                            background-color: #8dc63f;
-                            width: 120px;
-                            height: 35px;
-                            border-radius: 20px;
-                            justify-content: space-around;
-                            cursor: pointer;
+                    .contentCover {
+                        margin-top: 15px;
 
-                            p {
-                                font-size: 16px;
-                                font-weight: bold;
-                                margin-bottom: unset !important;
+                        .content {
+                            .contentTitle {
+                                h2 {
+                                    text-transform: uppercase;
+                                    font-size: 20px;
+                                    color: #fff;
+                                    white-space: nowrap;
+                                    width: 350px;
+                                    overflow: hidden;
+                                    text-overflow: ellipsis;
+                                }
                             }
 
-                            .iconBtn {
-                                font-size: 18px;
+                            .contentBottom {
+                                .contentBottomUp {
+                                    text-transform: uppercase;
+                                    font-size: 15px
+                                }
+                            }
+                        }
+
+                        .btn_see_more {
+                            .btn_see_more_link {
+                                background-image: linear-gradient(to left, #8dc63f, #00894f, #8dc63f);
+                                background-size: 200%;
+                                width: 120px;
+                                height: 35px;
+                                border-radius: 20px;
+                                justify-content: space-around;
+                                cursor: pointer;
+                                color: #fff;
+                                transition: 0.6s;
+                                border: 1px solid #fff;
+
+                                p {
+                                    font-size: 16px;
+                                    font-weight: bold;
+                                    margin-bottom: unset !important;
+                                }
+
+                                .iconBtn {
+                                    font-size: 18px;
+                                    color: #fff;
+                                }
+
+                                &:hover {
+                                    background-position: right;
+                                }
                             }
                         }
                     }
@@ -934,7 +957,9 @@
             }
 
             .customerInformationBottom {
-                input, textarea {
+
+                input,
+                textarea {
                     width: 28rem;
                 }
             }
