--- a/src/components/news/news.module.scss
+++ b/src/components/news/news.module.scss
@@ -181,6 +181,10 @@
                     color: #8dc63f;
                     font-size: 16px;
                     font-weight: bold;
+                    white-space: nowrap;
+                    width: 100%;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
                 }
 
                 .lastestPostContent {
@@ -278,7 +282,7 @@
             }
         }
 
-        svg { 
+        svg {
             display: none;
         }
     }
