--- a/src/components/who-we-are/who-we-are.module.scss
+++ b/src/components/who-we-are/who-we-are.module.scss
@@ -459,12 +459,13 @@
                 color: #00894F;
             }
 
-            textarea {
+            .styleTextArea {
                 width: 55rem;
                 background-color: #fff;
                 padding: 10px 20px;
                 font-size: 18px;
                 color: #000;
+                max-width: unset;
             }
 
             .btn_see_more {
@@ -483,10 +484,12 @@
                         font-weight: bold;
                         text-transform: uppercase;
                         margin-bottom: unset !important;
+                        color: #fff;
                     }
 
                     .iconBtn {
                         font-size: 18px;
+                        color: #fff;
                     }
                 }
             }
