--- a/src/components/contact/contact.module.scss
+++ b/src/components/contact/contact.module.scss
@@ -311,12 +311,13 @@
                 color: #00894F;
             }
 
-            textarea {
+            .styleTextArea {
                 width: 55rem;
                 background-color: #fff;
                 padding: 10px 20px;
                 font-size: 18px;
                 color: #000;
+                max-width: unset;
             }
 
             .btn_see_more {
@@ -335,10 +336,12 @@
                         font-weight: bold;
                         text-transform: uppercase;
                         margin-bottom: unset !important;
+                        color: #fff;
                     }
 
                     .iconBtn {
                         font-size: 18px;
+                        color: #fff;
                     }
                 }
             }
