--- a/src/components/recruitment/recruitment.module.scss
+++ b/src/components/recruitment/recruitment.module.scss
@@ -237,6 +237,7 @@
             margin-bottom: 4rem;
             box-shadow: 4px 4px 10px -1px #1D4486;
             width: 75% !important;
+            border-radius: 10px;
 
             .productCardImage {
                 display: flex;
@@ -335,12 +336,13 @@
                 color: #00894F;
             }
 
-            textarea {
+            .styleTextArea {
                 width: 55rem;
                 background-color: #fff;
                 padding: 10px 20px;
                 font-size: 18px;
                 color: #000;
+                max-width: unset;
             }
 
             .btn_see_more {
@@ -359,10 +361,12 @@
                         font-weight: bold;
                         text-transform: uppercase;
                         margin-bottom: unset !important;
+                        color: #fff;
                     }
 
                     .iconBtn {
                         font-size: 18px;
+                        color: #fff;
                     }
                 }
             }
