Add image introduce

--- a/src/components/company-profile/company-profile.module.scss
+++ b/src/components/company-profile/company-profile.module.scss
@@ -109,7 +109,7 @@
         .aboutTheDirectorLeftBackground {
             width: 615px;
             height: 300px;
-            background-color: #8dc63f;
+            background-color: #fff;
         }
     }
 
@@ -210,7 +210,7 @@
         .employeeSystemRightBackground {
             width: 615px;
             height: 300px;
-            background-color: #8dc63f;
+            background-color: #fff;
         }
     }
 }
