--- a/src/components/home/home.module.scss
+++ b/src/components/home/home.module.scss
@@ -965,7 +965,7 @@
             .customerInformationBottom {
 
                 input,
-                textarea {
+                .styleTextArea {
                     width: 28rem;
                 }
             }
