--- a/src/components/news/news.module.scss
+++ b/src/components/news/news.module.scss
@@ -395,3 +395,43 @@
         }
     }
 }
+
+@media only screen and (max-width: 768px) {
+    .introduce {
+        margin-left: 15px;
+    }
+
+    .newsTime {
+        margin: 20px 20px 0 20px;
+
+        .newsTimeLine {
+            width: 45%;
+        }
+    }
+
+    .newsTimeBody {
+        margin: 10px 10px 0 10px;
+    }
+
+    .customerInformation {
+        .customerInformationCover {
+            .customerInformationTop {
+                .customerInformationTopCover {
+                    .customerInformationTitle {
+                        h1 {
+                            font-size: 31px;
+                        }
+                    }
+                }
+            }
+
+            .customerInformationBottom {
+
+                input,
+                .styleTextArea {
+                    width: 28rem;
+                }
+            }
+        }
+    }
+}
